Wed Nov 25 15:40:59 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/NonChangeableAttribute/Connector/NonChangeable_Connector_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Connector/SetConnectorAttribute_Connector_exec.cpp:
          Resolved minor typos.

Wed Nov 25 15:30:14 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/README:
        * connectors/dds4ccm/tests/SetConnectorAttributes/README:
          Added test description.

Wed Nov 25 15:15:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Get_Connection_Test/README:
        * connectors/dds4ccm/tests/NonChangeableAttribute/README:
          Added test description.

Wed Nov 25 14:26:21 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.h
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.h
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h
        * connectors/dds4ccm/impl/ndds/Publisher.cpp
        * connectors/dds4ccm/impl/ndds/Publisher.h
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp
        * connectors/dds4ccm/impl/ndds/Subscriber.h
          Implemented all with_profile methods

Wed Nov 25 14:12:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/UnkeyedWriter:
        * connectors/dds4ccm/tests/UnkeyedWriter/Base:
        * connectors/dds4ccm/tests/UnkeyedWriter/Base/Writer_Base.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Base/Writer_Base.mpc:
        * connectors/dds4ccm/tests/UnkeyedWriter/Connector: